css: ensure a max-height for images and videos
This way, in landscape mode, tall images are not too tall.

--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -433,6 +433,7 @@ main {
     .lf-img, .lf-video {
         width: 100%;
         height: 100%;
+        max-height: 100vh;
         position: absolute;
         top: 0;
         left: 0;
@@ -441,6 +442,7 @@ main {
         margin-top: 1em;
         margin-bottom: (@line-height*1em);
         padding: 0 0 1em;
+        max-height: 100vh;
     }
     .lf-img-inner, .lf-video-inner {
         display: block;
